# ProsperOrPerish

./: .gitignore  README.md  bom_test.txt
ProsperPerishCalcs/: .cursorrules  .gitignore  README.md  convert_to_utf8_bom.py  main.py  pyproject.toml
ProsperPerishCalcs/analysis/: __init__.py
ProsperPerishCalcs/analysis/building_levels/: __init__.py  config.json  (+1 more)
ProsperPerishCalcs/core/: __init__.py
ProsperPerishCalcs/docs/: eu5_pp_crash_investigation.md  paradox_escalation_checklist.md  river_modifier_5x_bug_analysis.md
ProsperPerishCalcs/mod_steam_descriptions/: 0.5.txt  0.6.txt
ProsperPerishCalcs/scripts/: watch_savegames.bat
ProsperPerishCalcs/tests/: test_apply_mining_rgo_modifiers.py  test_building_data_cookery.py  test_building_employment.py  test_building_pm_io_matrix.py  test_country_setup_data.py  test_deep_merge_upm.py  test_defines_parsing.py  test_generate_rgo_startup_buildings.py  test_goods_output_modifiers.py  test_goods_parsing.py  test_goods_subsets.py  test_location_data.py  test_location_ranks_data.py  test_market_food_df.py  test_matrix_vs_game_files.py  test_pop_parsing.py  test_population_capacity_data.py  test_pp_farmed_goods_map_modes.py  test_pp_rgo_coverage.py  test_pp_rgo_static_bonuses_io.py  test_savegame_loader.py  test_savegame_processor.py  test_static_modifiers_data.py
ProsperPerishCalcs/tools/: __init__.py  convert_utf8_bom.py  emit_pp_rgo_modifiers.py  fix_dds_mipmaps.py  generate_pp_goods_output_map_modes.py  parse_eu5_crash_bundles.py  pp_rgo_on_action_snippet.txt  validate_population_capacity_combos.py
(+248 files in other folders)
