[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "analysis", "tools"]

[project]
name = "prosperperishcalcs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eu5>=0.0.6",
    "openpyxl>=3.1.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
]