[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "analysis", "tools"]

[tool.pytest.ini_options]
markers = [
    "slow: loads a packed EU5 save via Rakaly (can take minutes on first decode)",
]

[project]
name = "prosperperishcalcs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "capstone>=5.0.0",
    "eu5>=0.0.6",
    "minidump>=0.0.24",
    "pefile>=2024.8.26",
    "openpyxl>=3.1.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
]